# Test-iOS

./: .gitignore  CROSS_PLATFORM.md  Cargo.toml  README.md  mobile.toml
.cargo/: config.toml
.github/workflows/: android.yml  build.yml  ios.yml
src/: lib.rs
