[package]
name = "ren-rs-refactor"
version = "0.1.0"
authors = ["xphost <xphost@foxmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ren-rs-refactor-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
winit = {version = "^0.30", features = ["android-native-activity", "rwh_06"]}
softbuffer = "^0.4"
tiny-skia = "^0.12"
image = {version = "^0.25", default-features = false, features = ["png", "jpeg"]}
rodio = "^0.22"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.15"
log = "^0.4"
ndk-glue = "^0.7"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "^5.2"
